# ParseText

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ParseText.F90  ParseText.f90  README  README.md  example.f90  notes.org  version.h.in
cmake/: version.cmake
test/: CMakeLists.txt  sample_file  test_PT.f90  test_default_0.f90  test_fail_0.f90  test_fail_1.f90
